--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
         "README.md"
     ],
     "dependencies": {
-        "angular" :  ">=1.0.8",
-        "underscore" : "latest"
+        "angular" :  "1.3.5"
     },
     "description": "Angular galleria directive"
 }
