galleria is now available in bower, added config path for themes

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   ],
   "dependencies": {
     "angular": "1.3.5",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "galleria": "~1.4.2"
   },
   "description": "Angular galleria directive"
 }
